--- a/Chat2chat-objc/Chat/View/MessageCells/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
+++ b/Chat2chat-objc/Chat/View/MessageCells/SelfMessageTableViewCell/SelfMessageTableViewCell.xib
@@ -3,36 +3,59 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="selfMessageTableViewCell" rowHeight="162" id="KGk-i7-Jjw" customClass="SelfMessageTableViewCell" customModule="Chat2chat_objc" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="397" height="162"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelfMessageTableViewCell" rowHeight="82" id="KGk-i7-Jjw" customClass="SelfMessageTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="333" height="82"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="397" height="162"/>
+                <rect key="frame" x="0.0" y="0.0" width="333" height="82"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ogq-i7-hiY">
-                        <rect key="frame" x="177.5" y="70.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C5n-ew-sj9">
+                        <rect key="frame" x="299.5" y="10" width="30.5" height="70"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bu3-rS-qid">
+                                <rect key="frame" x="10" y="10" width="10.5" height="50"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="SelfMessageColor"/>
+                        <constraints>
+                            <constraint firstItem="bu3-rS-qid" firstAttribute="leading" secondItem="C5n-ew-sj9" secondAttribute="leading" constant="10" id="48e-Ox-cmo"/>
+                            <constraint firstAttribute="bottom" secondItem="bu3-rS-qid" secondAttribute="bottom" constant="10" id="Su9-Dd-P8u"/>
+                            <constraint firstAttribute="trailing" secondItem="bu3-rS-qid" secondAttribute="trailing" constant="10" id="fBV-9r-kXa"/>
+                            <constraint firstItem="bu3-rS-qid" firstAttribute="top" secondItem="C5n-ew-sj9" secondAttribute="top" constant="10" id="jwx-Ze-L3E"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="Ogq-i7-hiY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0BO-3m-scq"/>
-                    <constraint firstItem="Ogq-i7-hiY" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Dug-Kg-ajc"/>
+                    <constraint firstAttribute="bottom" secondItem="C5n-ew-sj9" secondAttribute="bottom" constant="2" id="Sg5-TO-sOm"/>
+                    <constraint firstItem="C5n-ew-sj9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="TWC-z8-y6T"/>
+                    <constraint firstAttribute="trailing" secondItem="C5n-ew-sj9" secondAttribute="trailing" constant="3" id="ZOl-15-snL"/>
+                    <constraint firstItem="C5n-ew-sj9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="gyC-rq-7H4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <point key="canvasLocation" x="-3.6231884057971016" y="192.1875"/>
+            <connections>
+                <outlet property="messageTextLabel" destination="bu3-rS-qid" id="gWF-6G-xhf"/>
+                <outlet property="textBackgroundView" destination="C5n-ew-sj9" id="q1T-pL-Id4"/>
+            </connections>
+            <point key="canvasLocation" x="-121.0144927536232" y="54.910714285714285"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="SelfMessageColor">
+            <color red="0.1289999932050705" green="0.030999999493360519" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
